@startuml
title Escuela

entity "empleado" as e{
* id : INT <<PK>>
--
nombre: VARCHAR(100)
apellido_paterno: VARCHAR(100)
apellido_materno: VARCHAR(100)
edad: INT
departamento_id: INT <<FK>>
}

entity "departamento" as d{
*id : INT <<PK>>
--
nombre: VARCHAR(100)
direccion: VARCHAR(200)
--
* FK empleado.id
}

' e }o--|| d : tiene
d ||--o{ e : tiene
@enduml